--- a/package.xml
+++ b/package.xml
@@ -52,11 +52,13 @@
   <build_depend>rospy</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
+  <!-- For automatically pulling ros package version number into the sphinx documentation -->
+  <build_depend>python-catkin-pkg</build_depend> 
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <rosdoc config="rosdoc.yaml"/>
   </export>
 </package>
